--- a/src/styles/layout/main.scss
+++ b/src/styles/layout/main.scss
@@ -13,7 +13,6 @@
         width: 100vw;
         padding: 20px;
         background: $gradient-bgd;
-        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     }
 }
 
@@ -59,6 +58,21 @@
 
     &__label {
         padding: 15px;
+        font-size: 12px;
+    }
+
+    &__input {
+        color: $color-primary2;
+        font-size: 12px;
+        padding: 5px;
+        border: none;
+    }
+
+    &__select {
+        color: $color-primary2;
+        font-size: 12px;
+        padding: 5px;
+        border: none;
     }
 }
 
@@ -71,5 +85,31 @@
     &__title {
         color: $color-primary2;
         font-family: $font-secondary3;
+    }
+
+    &__label {
+        color: $color-primary2;
+        font-size: 12px;
+        padding: 5px;
+    }
+
+    &__input {
+        color: $color-primary2;
+        font-size: 10px;
+        padding: 5px;
+        border: none;
+        margin: 5px;
+    }
+
+    &__btn {
+        background: $color-secondary;
+        color: $color-primary2 ;
+        padding: 10px;
+        border-radius: 10px;
+        border: none;
+        font-family: $font-main;
+        font-size: 12px;
+        font-weight: 700;
+        cursor: pointer;
     }
 }
