--- a/src/styles/core/variables.scss
+++ b/src/styles/core/variables.scss
@@ -12,7 +12,7 @@ $color-primary: #CC212A;
 $color-primary2: #808080;
 $color-primary3: #ffe4c4;
 $color-secondary: #fff;
-$color-secondary2: #f08080;
+$color-secondary2: #fafad152;
 $color-secondary3: #fafad1;
 $gradient-bgd-main: linear-gradient(0, #fafad152, #8080806a);
 $gradient-bgd: linear-gradient(180deg, #fafad1, #808080ba);
